--- a/reservation_frontend/src/app/app.component.html
+++ b/reservation_frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div id="app-container">
+<div id="app-container" class="app-container">
 
   <router-outlet></router-outlet>
   <div id="notifications-container">
