--- a/reservation_frontend/src/app/components/additional-edit/additional-edit.component.html
+++ b/reservation_frontend/src/app/components/additional-edit/additional-edit.component.html
@@ -1,4 +1,4 @@
-<form #editAdditionalForm="ngForm" (ngSubmit)="onSubmit()">
+<form #editAdditionalForm="ngForm" (ngSubmit)="onSubmit()" class="space">
   <div class="form-group">
     <mat-form-field appearance="fill">
       <mat-label>Name:</mat-label>
