--- a/reservation_frontend/src/app/components/additional-form/additional-form.component.html
+++ b/reservation_frontend/src/app/components/additional-form/additional-form.component.html
@@ -1,15 +1,18 @@
-<form [formGroup]="additionalForm" (ngSubmit)="createAdditional()">
-  <mat-form-field>
-    <mat-label>Name</mat-label>
-    <input matInput formControlName="name" required>
-  </mat-form-field>
+<div class="space">
+  <form [formGroup]="additionalForm" (ngSubmit)="createAdditional()" class="form-container">
+    <mat-form-field>
+      <mat-label>Name</mat-label>
+      <input matInput formControlName="name" required>
+    </mat-form-field>
 
-  <mat-form-field>
-    <mat-label>Price</mat-label>
-    <input matInput type="number" formControlName="price" required>
-  </mat-form-field>
+    <mat-form-field>
+      <mat-label>Price</mat-label>
+      <input matInput type="number" formControlName="price" required>
+    </mat-form-field>
 
-  <mat-checkbox formControlName="available">Available</mat-checkbox>
+    <mat-checkbox color="primary" class="mat-checkbox">Available</mat-checkbox>
+    <button mat-raised-button color="primary" type="submit" [disabled]="!additionalForm.valid">Create</button>
+  </form>
 
-  <button mat-raised-button color="primary" type="submit" [disabled]="!additionalForm.valid">Create</button>
-</form>
+
+</div>
