--- a/reservation_frontend/src/app/components/main-content/main-content.component.html
+++ b/reservation_frontend/src/app/components/main-content/main-content.component.html
@@ -1,14 +1,17 @@
-<ng-container>
+<ng-container class="container">
   <div>
-    <mat-toolbar color="primary">
+    <mat-toolbar class="top-bar">
+      <div class="right-half"></div>
+      <div class="left-half"></div>
       <button class="app-logo-button" mat-button (click)="redirectToBoard()">Reservation System</button>
       <span class="example-spacer"></span>
-      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+      <app-menu></app-menu>
+      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu" class="menu-icon">
         <mat-icon>more_vert</mat-icon>
       </button>
       <mat-menu #menu="matMenu">
         <button mat-menu-item>
-          <mat-icon>clear</mat-icon>
+          <mat-icon>logout</mat-icon>
           <span (click)="logout()">Logout</span>
         </button>
       </mat-menu>
@@ -16,11 +19,7 @@
   </div>
 
   <mat-drawer-container class="example-container">
-    <mat-drawer class="sidebar" mode="side" opened>
-      <app-sidebar></app-sidebar>
-    </mat-drawer>
     <mat-drawer-content class="main-content">
-
       <router-outlet></router-outlet>
     </mat-drawer-content>
   </mat-drawer-container>
