feat: search,sort,pagination

--- a/reservation_frontend_angular/src/app/components/additional-list/additional-list.component.html
+++ b/reservation_frontend_angular/src/app/components/additional-list/additional-list.component.html
@@ -1,21 +1,35 @@
-<div>
-  <h2>List of Additionals</h2>
-  <div *ngFor="let additional of additionals" class="additional-item">
-    <div class="attribute name">
-      <p>{{ additional.name }}</p>
+<div class="container">
+  <div class="search-container">
+    <input type="text" placeholder="Search..." [(ngModel)]="searchTerm" (input)="onSearch()">
+  </div>
+  <div class="button-container">
+    <button mat-button color="primary" (click)="sortByName()">Sort by Name</button>
+    <button mat-button color="primary" (click)="sortByPrice()">Sort by Price</button>
+    <button mat-button color="primary" (click)="sortByAvailability()">Sort by Availability</button>
+  </div>
+  <div class="additionals-container">
+    <div *ngFor="let additional of paginatedAdditionals" class="additional-item">
+      <div class="attribute name">
+        <p>{{ additional.name }}</p>
+      </div>
+      <div class="attribute">
+        <p>Price: {{ additional.price }}</p>
+      </div>
+      <div class="attribute">
+        <p>Available: {{ additional.available ? 'Yes' : 'No' }}</p>
+      </div>
+      <div class="attribute">
+        <button mat-button color="primary" (click)="editAdditional(additional)">Edit</button>
+      </div>
+      <div class="attribute">
+        <button mat-raised-button class="delete-button" (click)="onDelete(additional?.id || 0)">Delete</button>
+      </div>
+      <hr>
     </div>
-    <div class="attribute">
-      <p>Price: {{ additional.price }}</p>
-    </div>
-    <div class="attribute">
-      <p>Available: {{ additional.available ? 'Yes' : 'No' }}</p>
-    </div>
-    <div class="attribute">
-      <button mat-button color="primary" (click)="editAdditional(additional)">Edit</button>
-    </div>
-    <div class="attribute">
-      <button mat-raised-button class="delete-button" (click)="onDelete(additional?.id || 0)">Delete</button>
-    </div>
-    <hr>
+  </div>
+  <div class="pagination">
+    <button (click)="onPageChange(currentPage - 1)" [disabled]="currentPage === 1">Previous</button>
+    <span>{{ currentPage }}</span>
+    <button (click)="onPageChange(currentPage + 1)" [disabled]="currentPage * itemsPerPage >= additionals.length">Next</button>
   </div>
 </div>
