--- a/reservation_frontend_angular/src/app/components/additional-list/additional-list.component.css
+++ b/reservation_frontend_angular/src/app/components/additional-list/additional-list.component.css
@@ -46,3 +46,73 @@ button:hover{
   transition: background-color 0.4s ease, border-color 0.4s ease, color 0.4s ease;
   color:white;
 }
+
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center horizontally */
+  justify-content: center; /* Center vertically */
+  margin-top: 20px; /* Add margin for spacing */
+}
+
+.button-container {
+  margin-bottom: 20px; /* Add some space between buttons and the list */
+}
+
+.button-container button {
+  margin-right: 20px; /* Add space between buttons */
+}
+
+
+.additionals-container {
+  width: 100%; /* Make sure the container takes full width */
+  max-width: 100%; /* Adjust as needed */
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.search-container {
+  margin-bottom: 20px;
+}
+
+.search-container input[type="text"] {
+  padding: 8px;
+  width: 300px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.button-container {
+  margin-bottom: 20px;
+}
+
+.button-container button {
+  margin-right: 10px;
+}
+
+.pagination {
+  margin-top: 20px;
+}
+
+.pagination button {
+  padding: 8px 16px;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.pagination button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.pagination span {
+  margin: 0 10px;
+}
