--- a/reservation_frontend_angular/src/app/components/reservation-users-list/reservation-users-list.component.html
+++ b/reservation_frontend_angular/src/app/components/reservation-users-list/reservation-users-list.component.html
@@ -8,26 +8,47 @@
 </mat-form-field>
 
 <div *ngIf="selectedUserDetails">
-  <h3>{{selectedUserDetails.username}}'s Reservations</h3>
+  <h3>{{ selectedUserDetails.username }}'s Reservations</h3>
   <div *ngIf="selectedUserDetails.reservations.length > 0; else noReservations">
-    <div class="reservation-cards">
-      <div class="reservation-card" *ngFor="let reservation of selectedUserDetails.reservations">
-        <h3>{{ reservation.name }}</h3>
-        <p>Arrival: {{ reservation.arrival }}</p>
-        <p>Departure: {{ reservation.departure }}</p>
-        <div *ngIf="reservation.additionals && reservation.additionals.length > 0">
-          <p>Additional Details:</p>
-          <ul>
-            <li *ngFor="let additional of reservation.additionals">
-              {{ additional.name }} - Price: {{ additional.price }}
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
+    <table mat-table [dataSource]="selectedUserDetails.reservations" class="mat-elevation-z8">
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Reservation Name </th>
+        <td mat-cell *matCellDef="let reservation"> {{ reservation.name }} </td>
+      </ng-container>
+
+      <!-- Arrival Column -->
+      <ng-container matColumnDef="arrival">
+        <th mat-header-cell *matHeaderCellDef> Arrival </th>
+        <td mat-cell *matCellDef="let reservation"> {{ reservation.arrival }} </td>
+      </ng-container>
+
+      <!-- Departure Column -->
+      <ng-container matColumnDef="departure">
+        <th mat-header-cell *matHeaderCellDef> Departure </th>
+        <td mat-cell *matCellDef="let reservation"> {{ reservation.departure }} </td>
+      </ng-container>
+
+      <!-- Additional Details Column -->
+      <ng-container matColumnDef="additionals">
+        <th mat-header-cell *matHeaderCellDef> Additional Details </th>
+        <td mat-cell *matCellDef="let reservation">
+          <div *ngIf="reservation.additionals && reservation.additionals.length > 0">
+            <ul>
+              <li *ngFor="let additional of reservation.additionals">
+                {{ additional.name }} - Price: {{ additional.price }}
+              </li>
+            </ul>
+          </div>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
   </div>
   <ng-template #noReservations>
     <p>No reservations found for this user.</p>
   </ng-template>
 </div>
-
